<resources>
    <string name="AloopyAPIURL">http://130.211.177.252:9999</string>
    <string name="SHARE_PREF_UserId">UserId</string>
    <string name="SHARE_PREF_UserName">Username</string>
    <string name="SHARE_PREF_MerchantId">MerchantId</string>
    <string name="SHARE_PREF_MerchantType">MerchantType</string>
    <string name="EXTRA_LoginDisplay_Name">com.merchant.aloopy.aloopymerchantapp.LoginDisplay_Name</string>
    <string name="EXTRA_StampDetail_Id">com.merchant.aloopy.aloopymerchantapp.StoreStampId</string>
    <string name="EXTRA_LoyaltyDetail_Id">com.merchant.aloopy.aloopymerchantapp.LoyaltyId</string>
    <string name="EXTRA_QR_Scanner_Mode">QRScannerMode</string>
    <string name="Currency">Php</string>

    <string name="message_Internet_Required">This requires an active Internet connection.</string>
    <string name="message_InvalidCustomerStampID">Invalid Customer Stamp ID</string>
    <string name="message_unexpected_error">An unexpected error has occurred.</string>

    <string name="app_name">Aloopy Merchant App</string>
    <string name="title_activity_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="btnRefresh">REFRESH</string>
    <string name="StampCountLabel">Stamps</string>

    <string name="MerchantLogoAlt">Merchant Logo</string>
    <string name="StampRewardImageALT">Stamp Reward</string>
    <string name="btnScanCustomerStamp">Stamp Customer Card</string>
    <string name="btnUpdateCustomerStamp">Update Customer Stamp</string>
    <string name="btnBackToList">Back to List</string>
    <string name="lblStampScannerInstructions">Click on the button below to update the Customer Stamp you scanned. This will give them a new Stamp.</string>
    <string name="btnScanCustomerQR">Scan Customer QR Code</string>
    <string name="btnGiveCustomerStamp">Give Customer Stamp Set</string>
    <string name="lblGiveCustomerStampInstructions">Click on the button below to give scanned Customer a Stamp Card:</string>
    <string name="lblStatusLabel">Process Status:</string>
    <string name="lblStampScanCustomerQRInstructions">Click on the button below to scan a Customer\'s QR Code and give them a Stamp Set.</string>
    <string name="lblCustomerStampSetsLabel">Customer Stamp Sets</string>
    <string name="lblCompletedStampSetsLabel">Completed Stamp Sets</string>
    <string name="lblGiveCustomerLoyaltyInstructions">Click on the button below to scan a Customer\s QR Code and give them a Loyalty Card.</string>
    <string name="btnSaveCustomerLoyalty">Give Customer Loyalty Card</string>
    <string name="lblLoyaltyProgramDetails">Loyalty Program Details</string>
    <string name="lblCustomerLoyaltyCard">Customer Loyalty Card</string>
    <string name="lblAwardLoyaltyPoints">Award Loyalty Points</string>
    <string name="lblPointAmount">Points:</string>
    <string name="lblTranReferenceNo">Transaction Reference No:</string>
    <string name="txtTranReferenceNo_Required">Transaction Reference No. is required!</string>
    <string name="txtPointAmount_Required">Point Amount is required!</string>
    <string name="lblProcessStatus">Process Status:</string>


</resources>
