<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/lblAwardLoyaltyPoints"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Customer Loyalty Card Id:"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblScannedID"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="---"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblStatusLabel"
            android:text="@string/lblStatusLabel"
            android:layout_marginTop="10dp"
            android:textSize="14dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblStatus"
            android:layout_marginLeft="10dp"
            android:text="---"
            android:textSize="20dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPointAmount"
            android:textSize="14dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPointAmount"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text="0"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTranReferenceNo"
            android:textSize="14dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTranReferenceNo"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:text=""/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Transaction Amount"
            android:textSize="14dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtReferenceAmount"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:text="0.00"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/btnAwardPoints"
            android:text="Award Loyalty Points"/>
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />

    </LinearLayout>
</ScrollView>